source/css/style.scss
// Imports
// =========================================================================

@import "normalize/normalize";

//Font-face
// =========================================================================

@font-face {
  font-weight: 400;
  font-family: "Montserrat";
  font-style: normal;

  src: url("../fonts/subset-Montserrat-Regular.woff2") format("woff2"),
  url("../fonts/subset-Montserrat-Regular.woff") format("woff");
}

@font-face {
  font-weight: 900;
  font-family: "Montserrat";
  font-style: normal;

  src: url("../fonts/subset-Montserrat-Black.woff2") format("woff2"),
  url("../fonts/subset-Montserrat-Black.woff") format("woff");
}

@font-face {
  font-weight: 700;
  font-family: "Montserrat";
  font-style: normal;

  src: url("../fonts/subset-Montserrat-Bold.woff2") format("woff2"),
  url("../fonts/subset-Montserrat-Bold.woff") format("woff");
}

// Fonts
// =========================================================================

$montserrat: "Montserrat", Arial, serif;

// Colors
// =========================================================================

$white: #ffffff;
$black: #000000;
//https://artsexperiments.withgoogle.com/artpalette/colors/94919c-cbc7c8-f9ebdd-36346c-55505e
$color1: #55505e;
$color2: #556270;
$color3: #faf4ff;
$color4: #cbc7c8;
$color5: #94919c;
$color6: #8a6267;
$color7: #7a110d;
$color8: #e0f8ff;
$color9: #495a42;
$color10: #0055cc;
$color11: #976080;

// Breakpoints
// =========================================================================

$breakpoint1: 1190px;
$breakpoint2: 1420px;
$breakpoint3: 1650px;
$breakpoint4: 1880px;

@mixin respond-to($media) {
  @if $media == break0 {
    @media only screen and (max-width: $breakpoint1) {
      @content;
    }
  }
  @else if $media == break1 {
    @media only screen and (min-width: $breakpoint1 + 1) and (max-width: $breakpoint2 - 1) {
      @content;
    }
  }
  @else if $media == break2 {
    @media only screen and (min-width: $breakpoint2 + 1) and (max-width: $breakpoint3 - 1) {
      @content;
    }
  }
  @else if $media == break3 {
    @media only screen and (min-width: $breakpoint3 + 1) and (max-width: $breakpoint4 - 1) {
      @content;
    }
  }
  @else if $media == break4 {
    @media only screen and (min-width: $breakpoint4) {
      @content;
    }
  }
}

// Animations
// =========================================================================

@keyframes popupSlideIn {
  0% {
    right: -240px;
  }
  100% {
    right: 0;
  }
}

@keyframes popupSlideOut {
  0% {
    right: 0;
  }
  100% {
    right: -240px;
  }
}

@keyframes shake {
  10%,
  90% {
    transform: translate3d(-1px, 0, 0);
  }

  20%,
  80% {
    transform: translate3d(2px, 0, 0);
  }

  30%,
  50%,
  70% {
    transform: translate3d(-4px, 0, 0);
  }

  40%,
  60% {
    transform: translate3d(4px, 0, 0);
  }
}

// Global styles
// =========================================================================

html {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

*,
*::after,
*::before {
  -webkit-box-sizing: inherit;
          box-sizing: inherit;
}

img {
  max-width: 100%;
}

a {
  color: $color9;
  text-decoration: none;

  transition: all 0.3s ease-in-out;
  &:hover,
  &:focus,
  &:active {
    color: $color6;
  }
}

// Basic
// =========================================================================

.visually-hidden:not(:focus):not(:active) {
  position: absolute;

  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;

  white-space: nowrap;

  border: 0;

  clip: rect(0 0 0 0);
  clip-path: inset(100%);
}

.container {
  max-width: $breakpoint1;
  margin: 0 auto;
  padding-right: 20px;
  padding-left: 20px;@include respond-to (break2) {
    max-width: $breakpoint2;
  };@include respond-to (break3) {
    max-width: $breakpoint3;
  };@include respond-to (break4) {
    max-width: $breakpoint4;
  };@include respond-to (break4) {
    max-width: $breakpoint4;
  };
}

.body {
  min-width: $breakpoint1;

  font-weight: 400;
  font-size: 16px;
  line-height: 20px;
  font-family: $montserrat;
  color: $color1;

  background-color: $white;

  scroll-behavior: smooth;
  &--popup {
    width: 230px;
    min-width: 210px;
    padding: 10px;
    padding-bottom: 0;

    color: $color3;

    background-color: $color2;
  }
}


// Header
// =========================================================================

.header {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  min-height: 80px;
  margin-bottom: 40px;
  margin-left: 230px;
  padding-top: 10px;

  transition: margin-right 1.5s ease-in-out;

  @include respond-to (break4) {
    margin-left: 460px;
  };
  &--shrinked {
    margin-right: 230px;
  }
}

.header__heading {
  align-self: flex-end;
  margin: 0;
  margin-right: auto;
  margin-left: auto;
  padding: 0;

  font-weight: 900;
  font-size: 30px;
  line-height: 42px;
  vertical-align: bottom;
  text-align: center;
  color: $color1;
  text-transform: uppercase;
  font-style: normal;
  letter-spacing: 1px;
}

// Main
// =========================================================================

// Aside
// =========================================================================

.aside {
  position: fixed;
  top: 10px;

  width: 210px;
  height: 100%;
  margin-right: 20px;
  overflow: auto;

  @include respond-to (break4) {
    width: 460px;
  };
}

.aside__logo {
  max-width: 155px;
  height: auto;
  margin-bottom: 30px;
}

// Branch list
// =========================================================================

.branch {
  margin: 0;
  margin-bottom: 30px;
  padding: 0;
}

.branch__list {
  margin: 0;
  padding: 0;

  list-style: none;
}
/* ... */

